--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Aug 12 17:19:51 EEST 2016
-sdk.dir=C\:\\Users\\uur\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\muham\\AppData\\Local\\Android\\Sdk
