--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 12 17:19:51 EEST 2016
-sdk.dir=C\:\\Users\\muham\\AppData\\Local\\Android\\Sdk
+#Mon Aug 15 16:06:54 EEST 2016
+sdk.dir=C\:\\Users\\uur\\AppData\\Local\\Android\\Sdk
